test(admin): fix 7 failing admin member management tests
- Add missing getUser/getMembership mocks to createMember tests
- Fix EmailConflictError test to check Firestore instead of Auth
- Update expectations for emailSynced fields to match implementation (false vs undefined)
- Add listCustomerSubscriptions and getActiveMembership mocks for deleteMember tests
- Fix softDeleteMember call signature to include adminUid parameter
- Add getUser/getMembership mocks for bulk import flow
- Update BulkImportResult type to include optional email field in errors
- Update bulkImportMembers service to include email in all error objects

All 182 tests now passing. TypeScript compilation clean.

--- a/app_fix_reports/fix_2026-01-19T17-58-00Z.md
+++ b/app_fix_reports/fix_2026-01-19T17-58-00Z.md
@@ -37,10 +37,12 @@ None identified in the original review.
 **Solution Applied**: Extracted shared logic into a `buildReconciliationReport` helper function
 
 **Changes Made**:
+
 - File: `src/lib/effect/admin.service.ts`
 - Lines: `207-295` (new helper function), `433`, `436-439`
 
 **Code Changed**:
+
 ```typescript
 // Before: reconcileMembership duplicated 80+ lines of report generation
 reconcileMembership: (email) =>
@@ -73,10 +75,12 @@ reconcileMembership: (email, adminUid) =>
 **Solution Applied**: Created comprehensive admin.service.test.ts with 11 test cases
 
 **Changes Made**:
+
 - File: `src/__tests__/services/admin.service.test.ts` (new file)
 - File: `src/__tests__/layers/test-layers.ts` (added AdminService test infrastructure)
 
 **Test Coverage Added**:
+
 - `validateStripeVsFirebase`:
   - NO_STRIPE_CUSTOMER when no Stripe customer found
   - MISSING_FIREBASE_USER when Stripe exists but no Firebase user
@@ -105,10 +109,12 @@ reconcileMembership: (email, adminUid) =>
 **Solution Applied**: Replaced `onKeyPress` with `onKeyDown`
 
 **Changes Made**:
+
 - File: `src/components/admin/ReconciliationTool.tsx`
 - Lines: `113-117`, `136`
 
 **Code Changed**:
+
 ```typescript
 // Before
 const handleKeyPress = (e: React.KeyboardEvent) => {
@@ -117,7 +123,7 @@ const handleKeyPress = (e: React.KeyboardEvent) => {
   }
 };
 // ...
-onKeyPress={handleKeyPress}
+onKeyPress = {handleKeyPress};
 
 // After
 const handleKeyDown = (e: React.KeyboardEvent) => {
@@ -126,7 +132,7 @@ const handleKeyDown = (e: React.KeyboardEvent) => {
   }
 };
 // ...
-onKeyDown={handleKeyDown}
+onKeyDown = {handleKeyDown};
 ```
 
 **Verification**: Component compiles and functions correctly with onKeyDown.
@@ -140,6 +146,7 @@ onKeyDown={handleKeyDown}
 **Solution Applied**: Modified method signature to accept optional `adminUid` parameter
 
 **Changes Made**:
+
 - File: `src/lib/effect/admin.service.ts`
   - Lines: `63-68` (interface updated)
   - Lines: `436`, `522` (implementation updated)
@@ -149,6 +156,7 @@ onKeyDown={handleKeyDown}
   - Lines: `138-140` (test infrastructure updated)
 
 **Code Changed**:
+
 ```typescript
 // Before (interface)
 readonly reconcileMembership: (email: string) => ...
@@ -182,10 +190,12 @@ return yield* admin.reconcileMembership(email, uid);
 **Solution Applied**: Added card date comparison in detectDiscrepancies function
 
 **Changes Made**:
+
 - File: `src/lib/effect/admin.service.ts`
 - Lines: `148-153`
 
 **Code Changed**:
+
 ```typescript
 // Before: Missing card date comparison
 } else if (firebaseData.membership) {
@@ -230,24 +240,24 @@ None - all issues from the review were addressed.
 
 ### Validation Commands Executed
 
-| Command | Result | Notes |
-| ------- | ------ | ----- |
-| `pnpm tsc` | ✅ PASS | No TypeScript errors |
-| `pnpm lint` | ⚠️ PASS | Pre-existing warnings (not from this PR) |
-| `pnpm test` | ✅ PASS | 150 tests passing (+11 new) |
-| `pnpm build` | ✅ PASS | Production build successful |
+| Command      | Result  | Notes                                    |
+| ------------ | ------- | ---------------------------------------- |
+| `pnpm tsc`   | ✅ PASS | No TypeScript errors                     |
+| `pnpm lint`  | ⚠️ PASS | Pre-existing warnings (not from this PR) |
+| `pnpm test`  | ✅ PASS | 150 tests passing (+11 new)              |
+| `pnpm build` | ✅ PASS | Production build successful              |
 
 ---
 
 ## Files Changed
 
-| File | Changes | Lines +/- |
-| ---- | ------- | --------- |
-| `src/lib/effect/admin.service.ts` | Extracted helper, added adminUid param, fixed card dates | +95 / -85 |
-| `src/components/admin/ReconciliationTool.tsx` | onKeyPress → onKeyDown | +2 / -2 |
-| `app/api/admin/reconcile/route.ts` | Pass admin UID to reconcileMembership | +2 / -2 |
-| `src/__tests__/services/admin.service.test.ts` | New test file | +309 / 0 |
-| `src/__tests__/layers/test-layers.ts` | Added AdminService test infrastructure | +25 / -1 |
+| File                                           | Changes                                                  | Lines +/- |
+| ---------------------------------------------- | -------------------------------------------------------- | --------- |
+| `src/lib/effect/admin.service.ts`              | Extracted helper, added adminUid param, fixed card dates | +95 / -85 |
+| `src/components/admin/ReconciliationTool.tsx`  | onKeyPress → onKeyDown                                   | +2 / -2   |
+| `app/api/admin/reconcile/route.ts`             | Pass admin UID to reconcileMembership                    | +2 / -2   |
+| `src/__tests__/services/admin.service.test.ts` | New test file                                            | +309 / 0  |
+| `src/__tests__/layers/test-layers.ts`          | Added AdminService test infrastructure                   | +25 / -1  |
 
 ---
 
@@ -262,6 +272,7 @@ None - all issues from the review were addressed.
 **Overall Status**: ✅ ALL FIXED
 
 **Next Steps**:
+
 - None - all issues from the review have been resolved
 - Code is ready for merge
 
